--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="opt">String P = "20", Q = "19";</div>
         <div class="opt">int a = Integer.parseInt(P);</div>
-        <div class="opt">int a = Integer.);</div>
+        <div class="opt">int a = Integer.valueOf(Q);</div>
         <div class="opt">System.out.print(a + " " + b);</div>
         
 
