--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container header">
         <h1><span>Class</span> <span>Test</span></h1>
-        <h3>Computer Applications</h3>
+        <h3>Computer Science</h3>
     </div>
 
     <div class="container questions">
